--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,8 @@
       <img src="../public/assets/images/undraw_healthy_habit_bh5w.svg">
     </div>
     <div class="login-content">
-      <form action="index.html">
+      <%- include ("../views/partials/messages") %>
+      <form action="/users/login" method="POST">
         <img src="../public/assets/images/undraw_profile_pic_ic5t.svg">
         <h2 class="title">Progressive Overload</h2>
         <div class="input-div one">
@@ -27,7 +28,7 @@
           </div>
           <div class="div">
             <h5>Email</h5>
-            <input type="text" class="input">
+            <input type="email" id="email" name="email" class="input" />
           </div>
         </div>
         <div class="input-div pass">
@@ -36,7 +37,7 @@
           </div>
           <div class="div">
             <h5>Password</h5>
-            <input type="password" class="input">
+            <input type="password" id="password" name="password" class="input" />
           </div>
         </div>
         <input type="submit" class="btn" value="Log in">
@@ -54,8 +55,7 @@
 </html>
 
 
-<!--   
-<div class="row mt-5">
+<!-- <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
         <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
