--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,67 +1,82 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>Progressive Overload</title>
-	<meta name="description" content="Track your workouts">
-	<meta name="author" content="Perry Smith-Moss">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../public/assets/css/main.css">
-	<script src="https://kit.fontawesome.com/5eff175192.js" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <title>Progressive Overload</title>
+  <meta name="description" content="Track your workouts">
+  <meta name="author" content="Perry Smith-Moss">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../public/assets/css/main.css">
+  <script src="https://kit.fontawesome.com/5eff175192.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-	<img class="wave" src="../public/assets/images/wave.png">
-	<div class="container">
-		<div class="img">
-			<img src="../public/assets/images/undraw_healthy_habit_bh5w.svg">
-		</div>
-		<div class="login-content">
-			<form action="index.html">
-				<img src="../public/assets/images/undraw_profile_pic_ic5t.svg">
-				<h2 class="title">Progressive Overload</h2>
-				<div class="input-div one">
-					<div class="i">
-						<i class="fas fa-user"></i>
-					</div>
-					<div class="div">
-						<h5>Email</h5>
-						<input type="text" class="input">
-					</div>
-				</div>
-				<div class="input-div one">
-					<div class="i">
-						<i class="fas fa-user"></i>
-					</div>
-					<div class="div">
-						<h5>Username</h5>
-						<input type="text" class="input">
-					</div>
-				</div>
-				<div class="input-div pass">
-					<div class="i">
-						<i class="fas fa-lock"></i>
-					</div>
-					<div class="div">
-						<h5>Password</h5>
-						<input type="password" class="input">
-					</div>
-				</div>
-				<input type="submit" class="btn" value="Sign up">
-				<p class="or"><span>OR</span></p>
-				<a class="forgot-password" href="#"> <i class="fab fa-facebook-square"></i> Log in with Facebook</a>
-				<div class="sign-up">Have an account? <a href="/users/login" class="sign-up-button">Log in</a>
-				</div>
-			</form>
-		</div>
-	</div>
-	<script src="../public/assets/js/main.js"></script>
+  <img class="wave" src="../public/assets/images/wave.png">
+  <div class="container">
+    <div class="img">
+      <img src="../public/assets/images/undraw_healthy_habit_bh5w.svg">
+    </div>
+    <div class="login-content">
+      <%- include ("../views/partials/messages") %>
+      <form action="/users/register" method="POST">
+        <img src="../public/assets/images/undraw_profile_pic_ic5t.svg">
+        <h2 class="title">Progressive Overload</h2>
+        <div class="input-div one">
+          <div class="i">
+            <i class="fas fa-user"></i>
+          </div>
+          <div class="div">
+            <h5>Name</h5>
+            <input type="name" id="name" name="name" class="input"
+              value="<%= typeof name != 'undefined' ? name : '' %>" />
+          </div>
+        </div>
+        <div class="input-div one">
+          <div class="i">
+            <i class="fas fa-user"></i>
+          </div>
+          <div class="div">
+            <h5>Email</h5>
+            <input type="email" id="email" name="email" class="input"
+              value="<%= typeof email != 'undefined' ? email : '' %>" />
+          </div>
+        </div>
+        <div class="input-div pass">
+          <div class="i">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="div">
+            <h5>Password</h5>
+            <input type="password" id="password" name="password" class="input"
+              value="<%= typeof password != 'undefined' ? password : '' %>" />
+          </div>
+        </div>
+        <div class="input-div pass">
+          <div class="i">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="div">
+            <h5>Confirm Password</h5>
+            <input type="password" id="password2" name="password2" class="input"
+              value="<%= typeof password2 != 'undefined' ? password2 : '' %>" />
+          </div>
+
+        </div>
+        <input type="submit" class="btn" value="Sign up">
+        <p class="or"><span>OR</span></p>
+        <a class="forgot-password" href="#"> <i class="fab fa-facebook-square"></i> Log in with Facebook</a>
+        <div class="sign-up">Have an account? <a href="/users/login" class="sign-up-button">Log in</a>
+        </div>
+      </form>
+    </div>
+  </div>
+  <script src="../public/assets/js/main.js"></script>
 </body>
 
-</html> -->
+</html>
 
-<div class="row mt-5">
+<!-- <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
         <h1 class="text-center mb-3"><i class="fas fa-user-plus"></i> Register</h1>
@@ -118,4 +133,4 @@
         <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
       </div>
     </div>
-  </div>
+  </div> -->
