--- a/views/workouts/edit.ejs
+++ b/views/workouts/edit.ejs
@@ -27,9 +27,8 @@
         <div class="row">
             <div class="input-field">
                 <select id="status" name="status">
-                    <option value="public" selected>Public</option>
+                    <option value="public">Public</option>
                     <option value="private">Private</option>
-                    <option value="public" selected><%= workouts.status %></option>
                 </select>
                 <label for="status">Status</label>
             </div>
