--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,9 +42,8 @@
         </div>
         <input type="submit" class="btn" value="Log in">
         <p class="or"><span>OR</span></p>
-        <a class="facebook-login" href="#"> <i class="fab fa-facebook-square"></i> Log in with Facebook</a>
         <a class="forgot-password" href="#">Forgot password?</a>
-        <div class="sign-up">Don't have an account? <a href="/users/register" class="sign-up-button">Sign up</a>
+        <div class="dont-have_account">Don't have an account? <a href="/users/register" class="sign-up-button">Sign up</a>
         </div>
       </form>
     </div>
