--- a/views/register.ejs
+++ b/views/register.ejs
@@ -65,8 +65,7 @@
         </div>
         <input type="submit" class="btn" value="Sign up">
         <p class="or"><span>OR</span></p>
-        <a class="forgot-password" href="#"> <i class="fab fa-facebook-square"></i> Log in with Facebook</a>
-        <div class="sign-up">Have an account? <a href="/users/login" class="sign-up-button">Log in</a>
+        <div class="have-an_account">Have an account? <a href="/users/login" class="sign-up-button">Log in</a>
         </div>
       </form>
     </div>
