--- a/views/workouts/index.ejs
+++ b/views/workouts/index.ejs
@@ -16,10 +16,11 @@
 
 <body>
     <%- include('../partials/navbar.ejs') %>
-<h1>Public Workouts</h1>
+    <div class="container">
+<h2>Public Workouts</h2>
 <div class="row">
     <% workouts.forEach(function(workout) { %>
-        <div class="col s12 m4">
+        <div class="col s4 m4 l4">
             <div class="card">
                 <div class="card-image">
                     <%- editIcon(workout.user, user, workout._id, ) %>
@@ -29,7 +30,7 @@
                     <p><%= stripTags(truncate(workout.notes, 150)) %></p>
                     <br>
                     <a href="/workouts/user/<%- user._id %>">
-                        <h4><%= workout.user.name %></h4>
+                        <h6><%= workout.user.name %></h6>
                     </a>
                 </div>
                 <div class="card-action center-align">
@@ -39,6 +40,7 @@
         </div>
         <% }); %>
 </div>
+    </div>
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
