--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,10 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Font Awesome-->
+    <script src="https://kit.fontawesome.com/5eff175192.js" crossorigin="anonymous"></script>
+    <title>Progressive Overload</title>
+</head>
+
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
-      <h1><i class="fas fa-dumbbell fa-3x"></i></h1>
-      <p>Create an account or login</p>
+      <h2 class="welcome-title">Progressive Overload</h2>
+      <h3><i class="fas fa-dumbbell fa-3x"></i></h3>
+      <h5>Create an account or login</h5>
       <a href="/users/register" class="btn btn-primary btn-block mb-2">Register</a>
       <a href="/users/login" class="btn btn-secondary btn-block">Login</a>
     </div>
   </div>
 </div>
+
+</body>
+</html>
