--- a/views/workouts/show.ejs
+++ b/views/workouts/show.ejs
@@ -16,6 +16,7 @@
 
 <body>
     <%- include('../partials/navbar.ejs') %>
+    <div class="container">
 <div class="row">
     <div class="col s12 m8">
         <h3><%= workouts.exercise %>
@@ -31,14 +32,16 @@
     <div class="col s12 m4">
         <div class="card center-align">
             <div class="card-content">
-                <span class="card-title"><%= workouts.user.name %></span>
-                <img src="#" class="circle responsive-img img-small">
+                <h4>Author of Post</h4>
+                <a href="/workouts/user/<%- user._id %>">
+                    <h5><%= workouts.user.name %></h5>
             </div>
             <div class="card-action">
                 <a href="/workouts/user/<%-workouts.user._id %>">More From <%= workouts.user.name %></a>
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <!-- Compiled and minified JavaScript -->
